[package]
name = "rustcfml-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
cfml-common   = { git = "https://github.com/RustCFML/RustCFML", tag = "v0.15.0" }
cfml-compiler = { git = "https://github.com/RustCFML/RustCFML", tag = "v0.15.0" }
cfml-codegen  = { git = "https://github.com/RustCFML/RustCFML", tag = "v0.15.0" }
cfml-vm       = { git = "https://github.com/RustCFML/RustCFML", tag = "v0.15.0" }
cfml-stdlib   = { git = "https://github.com/RustCFML/RustCFML", tag = "v0.15.0", default-features = false }
serde_json = "1"
indexmap = "2"
url = "2"

# uuid is a transitive dep of cfml-vm (v4 feature). On wasm32-unknown-unknown
# uuid requires an explicit random source; adding it here merges the `js` feature
# into the unified build so the crate compiles.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid   = { version = "1", features = ["v4", "js"] }
js-sys = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
