[package]
name = "rustcfml-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
cfml-worker = { path = "../RustCFML/crates/cfml-worker" }

# uuid is a transitive dep of cfml-vm (v4 feature). On wasm32-unknown-unknown
# uuid requires an explicit random source; adding it here merges the `js`
# feature into the unified build so the crate compiles.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid   = { version = "1", features = ["v4", "js"] }
js-sys = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
