[package]
name = "rustcfml-worker-host"
version = "0.1.0"
edition = "2021"
authors = ["RustCFML Team"]
license = "MIT"
description = "Reference Cloudflare Workers host wiring for cfml-worker — fetch + scheduled + Durable Object."
build = "build.rs"

# Standalone (not a workspace member): the host crate is wasm32-only,
# so it shouldn't gate `cargo build` on the native target.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
cfml-worker = { git = "https://github.com/RustCFML/RustCFML.git", tag = "v0.513.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.8"
worker-macros = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
